[package]
name = "rs-blog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WordPressのハイスピードでハイセキュリティで省メモリなRust+RPoem版(v0.1.0時点は投稿CRUDの最小実装のみ)"
repository = "https://github.com/aon-co-jp/RS-Blog"

[[bin]]
name = "rs-blog"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }

[dev-dependencies]
poem = { version = "3.1", features = ["test"] }
